--- a/src/app/away-detail/away-detail.component.html
+++ b/src/app/away-detail/away-detail.component.html
@@ -7,10 +7,10 @@
         <Image class="away-image" [src]="myImageSrc" stretch="aspectFit"></Image>
         <Label class="title" verticalAlignment="top" [text]="team.fields.team.stringValue"></Label>
         <StackLayout class="full margins" backgroundColor="rgba(255, 255, 255, .7)">
-            <Label class="info-margins" [text]="'Record: (' + team.fields.wins.stringValue + '-' + team.fields.losses.stringValue + ')'"></Label>
-            <Label class="info-margins" [text]="'Pace: ' + team.fields.pace.stringValue"></Label>
-            <Label class="info-margins" [text]="'Offensive Rating: ' +  team.fields.oRtg.stringValue"></Label>
-            <Label class="info-margins" [text]="'Defensive Rating: ' + team.fields.dRtg.stringValue"></Label>
+            <Label [text]="'Record: (' + team.fields.wins.stringValue + '-' + team.fields.losses.stringValue + ')'"></Label>
+            <Label [text]="'Pace: ' + team.fields.pace.stringValue"></Label>
+            <Label [text]="'Offensive Rating: ' +  team.fields.oRtg.stringValue"></Label>
+            <Label [text]="'Defensive Rating: ' + team.fields.dRtg.stringValue"></Label>
         </StackLayout>
     </StackLayout>
 </GridLayout>
