card-view changes

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -14,11 +14,11 @@
     }
 
     .page-icon {
-        font-size: 72;
+        font-size: 20;
         vertical-align: top;
-        horizontal-align: center;
-        color: $page-icon-color;
-        margin-top: 20%;
+        horizontal-align: left;
+        color: #F44336;
+        margin-bottom: 20px;
     }
 }
 
