--- a/src/app/away-detail/away-detail.component.scss
+++ b/src/app/away-detail/away-detail.component.scss
@@ -1,7 +1,7 @@
 #away {
     vertical-align: top;
     font-size: 20;
-    font-family: "Roboto", "Roboto-Light";
+    font-family: "Roboto Light", "Roboto-Light";
 }
 
 .margins {
@@ -15,7 +15,7 @@
 }
 
 .away-image {
-    width: 90%;
+    width: 50%;
 }
 
 .title {
@@ -27,6 +27,5 @@
 }
 
 .cardStyle {
-    background-color: rgba(0,0,0, 0.8);
-    color: white;
+    background-color: rgb(255, 255, 255);
 }
