--- a/src/app/home-detail/home-detail.component.scss
+++ b/src/app/home-detail/home-detail.component.scss
@@ -15,7 +15,7 @@
 }
 
 .home-image {
-    width: 90%;
+    width: 50%;
 }
 
 .title {
@@ -27,6 +27,5 @@
 }
 
 .cardStyle {
-    background-color: rgba(0,0,0, 0.8);
-    color: white;
+    background-color: rgb(255, 255, 255);
 }
