--- a/src/app/matchup/matchup.component.scss
+++ b/src/app/matchup/matchup.component.scss
@@ -1,18 +1,15 @@
 .cardStyle-top {
-    background-color: rgba(65, 65, 65, 0.8);
-    color: white;
+    background-color: rgb(255, 255, 255);
     height: 35%;
 }
 
 .cardStyle-bottom {
-    background-color: rgba(65, 65, 65, 0.8);
-    color: white;
+    background-color: rgb(255, 255, 255);
     height: 35%;
 }
 
 .cardStyle-middle {
-    background-color: rgba(65, 65, 65, 0.8);
-    color: white;
+    background-color: rgb(255, 255, 255);
     height: 15%;
 }
 
