--- a/src/app/matchup/matchup.component.html
+++ b/src/app/matchup/matchup.component.html
@@ -17,8 +17,8 @@
                     <Label dock="bottom" [text]="spread"></Label>
                 </DockLayout>
                 <DockLayout class="third">
-                    <Label dock="top" text="Confidence %"></Label>
-                    <Label dock="bottom" [text]="confidenceScore"></Label>
+                    <Label dock="top" text="Confidence"></Label>
+                    <Label dock="bottom" [text]="confidenceScore + '%'"></Label>
                 </DockLayout>
                 <DockLayout class="third">
                     <Label dock="top" text="Over/Under"></Label>
