--- a/src/app/matchup/matchup.component.scss
+++ b/src/app/matchup/matchup.component.scss
@@ -13,6 +13,13 @@
     height: 15%;
 }
 
+.content {
+    background-image: url("~/app/images/fire_logo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 .card-img {
     height: 100%;
     width: 100%;
